tests/fixtures/invalid/duplicate-field-names.bprint
{
  "schemaVersion": 1.0,
  "entityName": "Order",
  "description": "Order with duplicate field names",
  "primaryKey": { "partitionKey": "orderId" },
  "fields": [
    { "name": "orderId", "type": "string", "required": true },
    { "name": "orderId", "type": "string", "required": true }
  ]
}
